base/colors.less
// Urban colors
@white: #E7E8EB;
@light-gray: #929292;
@gray: #363748;
@blueish-gray: #363748;
@black: #292B35;

@red: #DE3A3B;
@orange: #D38D5E;
@yellow: #FEF935;
@green: #51C34F;
@cyan: #2CB6B1;
@blue: #0A6FFF;
@magenta: #E12DA0;
@lila: #6543E9;
@purple: #8783BE;

// General colors
@syntax-text-color: @white;
@syntax-cursor-color: @white;
@syntax-selection-color: @gray;
@syntax-background-color: @black;
@syntax-background-color-selected: @blueish-gray;

// Guide colors
@syntax-wrap-guide-color: @gray;
@syntax-indent-guide-color: @gray;
@syntax-invisible-character-color: @gray;

// For find and replace markers
@syntax-result-marker-color: @light-gray;
@syntax-result-marker-color-selected: @white;

// Gutter colors
@syntax-gutter-text-color: @light-gray;
@syntax-gutter-text-color-selected: @white;
@syntax-gutter-background-color: @syntax-background-color;
@syntax-gutter-background-color-selected: @syntax-background-color;

// For git diff info. i.e. in the gutter
@syntax-color-renamed: @blue;
@syntax-color-added: @green;
@syntax-color-modified: @orange;
@syntax-color-removed: @red;

